--- a/style.css
+++ b/style.css
@@ -1,44 +1,38 @@
-body{ 
-background-image: url(leoneventerkeyboard.jpg);
-background-size: cover;
-background-color: rgba(255, 226, 226, 0.7);
-background-blend-mode:screen;
+body {
+  background-blend-mode: screen;
 }
-h1{
-text-align:center;
-font-size: 26px;
-margin-top: 2em;
+h1 {
+  text-align: center;
+  font-size: 26px;
+  margin-top: 2em;
 }
-.key{
-display: inline-grid;
-height:90px;
-width:120px;
-text-align: center;
-border: 3px solid black;
-border-radius: 4px;
-margin-left:150px;
-margin-top:3rem;
-margin-right:60px;
-margin-bottom: 50px;
-font-size:20px;
-padding:8px 8px;
-font-weight: 700;
-font-family: Courier, Georgia
-}
-.playing{
-	transform: scale(1.2);
-	border-color: #AEE485;
-	transition: all 0.05s
-}
-.key:hover{
-	border: 3px dashed blue;
-	color:blue;
-	cursor: no-drop;
-}
+.keys {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
-footer{
-	font-size: 16px;
-	text-align: right;
-	margin-top: 15px;
-	margin-right: 20px;
+  max-width: 1200px;
+  margin: 0 auto;
+}
+.key {
+  height: 90px;
+  width: 120px;
+  margin: 1em 1.5em;
+  text-align: center;
+  border: 3px solid black;
+  border-radius: 4px;
+  font-size: 20px;
+  padding: 8px 8px;
+  font-weight: 700;
+  font-family: Courier, Georgia;
+}
+.playing {
+  transform: scale(1.2);
+  border-color: #aee485;
+  transition: all 0.05s;
+}
+.key:hover {
+  border: 3px dashed blue;
+  color: blue;
+  cursor: no-drop;
 }
